# matemux

./: .gitignore  LICENSE  README.md  cook.py  help.txt  matemux.py  pyproject.toml  recipe.py
matemux/: __main__.py  cook.py  matemux.py  parser.py  recipe.py  tmux.py
